# demo-repo

./: CMakeLists.txt  Ciao.cpp  Makefile  README.md  compile_commands.json  finale.workspace  log_out.txt
.codelite/: finale-marianna_adami.tags  finale.session
build-Debug/finale/: ObjectsList.txt  coordinate.cpp.o.d  esplorazione.cpp.o.d  griglia.cpp.o.d  main.cpp.o.d  nave.cpp.o.d
finale/: compile_flags.txt  coordinate.cpp  coordinate.h  corazzata.h  esplorazione.cpp  esplorazione.h  finale.mk  finale.project  griglia.cpp  griglia.h  main.cpp  nave.cpp  nave.h  soccorso.h
